<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="143dp"
        tools:layout_editor_absoluteY="72dp">

        <EditText
            android:id="@+id/registerUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="90dp"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="90dp"
            android:layout_marginBottom="15dp"
            android:ems="10"
            android:hint="@string/username_hint"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/registerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="90dp"
            android:layout_marginLeft="90dp"
            android:layout_marginBottom="15dp"
            android:ems="10"
            android:hint="@string/ful_name_hint"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/registerEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="90dp"
            android:layout_marginLeft="90dp"
            android:layout_marginBottom="15dp"
            android:ems="10"
            android:hint="@string/email_hint"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/registerPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="90dp"
            android:layout_marginLeft="90dp"
            android:layout_marginBottom="15dp"
            android:ems="10"
            android:hint="@string/password_hint"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/registerConfirmPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="90dp"
            android:layout_marginLeft="90dp"
            android:layout_marginBottom="15dp"
            android:ems="10"
            android:hint="@string/confirm_password_hint"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="156dp"
            android:layout_height="50dp"
            android:layout_marginStart="110dp"
            android:layout_marginLeft="110dp"
            android:layout_marginBottom="200dp"
            android:text="@string/register_button" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>