<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="-66dp">

        <EditText
            android:id="@+id/loginUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="90dp"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="140dp"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:hint="@string/username_hint"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/loginPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="90dp"
            android:layout_marginLeft="90dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/password_hint"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/registerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="190dp"
            android:layout_marginLeft="190dp"
            android:layout_marginBottom="20dp"
            android:text="@string/register_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:visibility="visible"
            tools:text="Want to register?"
            tools:visibility="visible" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="215dp"
            android:layout_height="39dp"
            android:layout_marginStart="90dp"
            android:layout_marginLeft="90dp"
            android:layout_marginBottom="208dp"
            android:text="@string/login_button" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>